2009-10-17 Pierre Wieser <pwieser@trychlos.org>

	* src/common/na-utils.c:
	* src/common/na-utils.h (na_utils_prefix_strings): New function.

	* src/nact/nact-assistant-import.c (prepare_importdone):
	Enhance the summary page.

	* src/nact/nact-xml-reader.c:
	Actually relabel action if required.
	Return all messages.

	* src/nact/nact-assistant-export.c (assist_prepare_exportdone):
	* src/nact/nact-assistant-import.c (prepare_importdone):
	At end, quit the assistant on Cancel without warning.

	* src/nact/base-window.c (setup_builder):
	A window may have its own builder, or its own UI XML definition file,
	or both.

	* src/nact/nact-assistant-export-ask.c
	(nact_assistant_export_ask_user): The dialog uses the common builder.

	Make clipboard have an access to preferences.
	Let the user be asked for the export format in drag and drop operations.

	* src/nact/nact-clipboard.c:
	* src/nact/nact-clipboard.h (nact_clipboard_new):
	Now pass the BaseWindow as an argument.

	* src/nact/nact-clipboard.c
	(nact_clipboard_dnd_get_text, nact_clipboard_dnd_drag_end):
	Ask the user if needed.

	* src/nact/nact-main-window.c:
	* src/nact/nact-tree-model.c: Updated accordingly.

2009-10-16 Pierre Wieser <pwieser@trychlos.org>

	Let the user be asked when exporting actions.

	* src/nact/base-window.c (instance_dispose):
	Fix hiding widgets when toplevel has not been initialized.
	(base_window_run): Now returns a boolean.

	* src/nact/nact-assistant-export-ask.c:
	* src/nact/nact-assistant-export-ask.h: New files.

	* src/nact/Makefile.am:
	* src/nact/nact-assistant-export.ui: Updated accordingly.

	* src/nact/nact-assistant-export.c:
	Ask the user if needed.
	Reread the current export format for each action.

	Record last export format as a preference.

	* src/common/na-iprefs.c:
	* src/common/na-iprefs.h
	(na_iprefs_get_export_format, na_iprefs_set_export_format):
	New functions.

	* src/common/na-xml-names.h:
	Move export format constantes to src/common/na-iprefs.h.
